--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,12 @@ html {
     font-size: 62.5%;
     /* font size => 62.5% * 16px = 10px */
     /* 1rem = 10px */
+
+    overflow-x: hidden;
+}
+
+body {
+    overflow-x: hidden;
 }
 
 
@@ -62,7 +68,9 @@ html {
 .header {
     background-color: var(--bg-color-1);
     height: 100vh;
-    width: auto;
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
 
     border-bottom-left-radius: 25px;
     border-bottom-right-radius: 25px;
@@ -80,8 +88,8 @@ html {
 }
 
 .navbar--image {
-    width: 2.8rem;
-    height: 2.8rem;
+    width: 28px;
+    height: 28px;
 }
 
 .navbar--nav {
@@ -138,8 +146,8 @@ html {
 
 .section--hobbies {
     align-items: center;
-    margin-right: 20%;
-    margin-left: 20%;
+    margin-right: 0 auto;
+    margin-left: 0 auto;
     margin-top: 6rem;
     margin-bottom: 8rem;
 }
@@ -177,8 +185,7 @@ html {
 
 .section--skills {
     align-items: center;
-    margin-right: 20%;
-    margin-left: 20%;
+    margin: 0 auto;
     margin-top: 6rem;
     margin-bottom: 8rem;
 }
@@ -268,7 +275,7 @@ html {
 }
 
 .slide {
-    width: 96rem;
+    width: 100%;
     height: 60rem;
     flex: 1 0 100%;
     background-color:var(--bg-color-2);
